JMH tweaks